# chan-dl

./: README.md  main.spec  pyproject.toml
.github/workflows/: build.yml
src/: blacklist.py  downloader.py  main.py
src/helpers/: __init__.py  message_boxes.py
src/models/: __init__.py  download_thread.py  progress_dialog.py  success_dialog.py
