[project]
name = "chan-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
    "pyside6-addons>=6.10.1",
    "pyside6-essentials>=6.10.1",
    "requests>=2.32.5",
]
